--- a/serverless.yml
+++ b/serverless.yml
@@ -187,7 +187,7 @@ resources:
       Properties:
         DistributionConfig:
           ViewerCertificate:
-            AcmCertificateArn: arn:aws:acm:us-east-1:762542255826:certificate/0e719c9f-4e21-4b90-b71f-68c2b42e158a
+            AcmCertificateArn: !Sub arn:aws:acm:us-east-1:${AWS::AccountId}:certificate/0e719c9f-4e21-4b90-b71f-68c2b42e158a
             SslSupportMethod: sni-only
           Enabled: true
           HttpVersion: http2
@@ -247,6 +247,7 @@ resources:
           'Fn::GetAtt': [ RunRekoLambdaFunction, Arn ]
         Action: 'lambda:InvokeFunction'
         Principal: 's3.amazonaws.com'
+        SourceAccount: !Ref "AWS::AccountId"
         SourceArn:
           Fn::Join:
             - ""
@@ -309,6 +310,13 @@ resources:
                     - 's3:GetObject'
                     - 's3:PutObjectAcl'
                   Resource: 'arn:aws:s3:::${self:service}-${self:provider.stage}/*'
+
+                - Effect: 'Allow'
+                  Action:
+                    - 's3:ListBucket'
+                    - 's3:GetObject'
+                  Resource: 
+                    'arn:aws:s3:::${self:service}-${self:provider.stage}'
 
                 - Effect: 'Allow'
                   Action:
