Changing bucket security to allow write to static code bucket

--- a/serverless.yml
+++ b/serverless.yml
@@ -309,7 +309,7 @@ resources:
                     - 's3:ListBucket'
                     - 's3:GetObject'
                     - 's3:PutObjectAcl'
-                  Resource: 'arn:aws:s3:::${self:service}-${self:provider.stage}/*'
+                  Resource: 'arn:aws:s3:::*'
 
                 - Effect: 'Allow'
                   Action:
