--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,7 @@
 
 plugins:
   - serverless-s3-sync
+  - serverless-enable-api-logs
 
 service: owasp10
 
@@ -24,47 +25,49 @@ provider:
   logRetentionInDays: 14
   region: eu-west-1
   memorySize: 128
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-       - dynamodb:Query
-       - dynamodb:Scan
-       - dynamodb:GetItem
-       - dynamodb:PutItem
-       - dynamodb:UpdateItem
-       - dynamodb:DeleteItem
-      Resource:
-        - Fn::GetAtt:
-          - rekoPhotosTable
-          - Arn
-        - Fn::GetAtt:
-          - rekoTagsTable
-          - Arn
-        - Fn::GetAtt:
-          - rekoPhotosTagsTable
-          - Arn
-        - Fn::Join:
-          - ""
-          - - Fn::GetAtt: [rekoPhotosTagsTable, Arn]
-            - '/index/*'
+  iam:
+      role:
+        statements:
+        - Effect: Allow
+          Action:
+          - dynamodb:Query
+          - dynamodb:Scan
+          - dynamodb:GetItem
+          - dynamodb:PutItem
+          - dynamodb:UpdateItem
+          - dynamodb:DeleteItem
+          Resource:
+            - Fn::GetAtt:
+              - rekoPhotosTable
+              - Arn
+            - Fn::GetAtt:
+              - rekoTagsTable
+              - Arn
+            - Fn::GetAtt:
+              - rekoPhotosTagsTable
+              - Arn
+            - Fn::Join:
+              - ""
+              - - Fn::GetAtt: [rekoPhotosTagsTable, Arn]
+                - '/index/*'
 
-    - Effect: Allow
-      Action:
-        - s3:ListBucket
-        - s3:GetObject
-        - s3:DeleteObject
-      Resource:
-         Fn::Join:
-           - ""
-           - - "arn:aws:s3:::"
-             - ${self:service}-${self:provider.stage}/*
+        - Effect: Allow
+          Action:
+            - s3:ListBucket
+            - s3:GetObject
+            - s3:DeleteObject
+          Resource:
+            Fn::Join:
+              - ""
+              - - "arn:aws:s3:::"
+                - ${self:service}-${self:provider.stage}/*
 
-    - Effect: Allow
-      Action:
-        - rekognition:DetectLabels
-        - rekognition:DetectFaces
-        - rekognition:DetectModerationLabels
-      Resource: "*"
+        - Effect: Allow
+          Action:
+            - rekognition:DetectLabels
+            - rekognition:DetectFaces
+            - rekognition:DetectModerationLabels
+          Resource: "*"
 
   stage: demo
 
@@ -92,6 +95,7 @@ functions:
       - http:
           path: info/get_tags
           method: get
+          cors: true
 
 resources:
   Resources:
@@ -312,6 +316,7 @@ resources:
                     - 's3:GetObject'
                     - 's3:PutObjectAcl'
                   Resource: 'arn:aws:s3:::*'
+                  # Resource: 'arn:aws:s3:::${self:service}-${self:provider.stage}'
 
                 - Effect: 'Allow'
                   Action:
